Forgot to add hover on footer items.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <table id="pages">
         <tr>
           <td>
-            <img src="images/g.png">
+            <img id="g" src="images/g.png">
           </td>
           <td rowspan="2">
             <a href="#">
@@ -200,13 +200,13 @@
         </tr>
       </table>
       <footer>
-        <p>
+        <p id="location">
           K1T Ottawa, Ontario -From your Internet address -
           <a href="#">Use precise location</a>
           -
           <a href="#">Learn more</a>
         </p>
-        <div>
+        <div class="help">
           <a href="#">Help</a>
           <a href="#">Send feedback</a>
           <a href="#">Privacy</a>
